--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -23,7 +23,7 @@
     margin: 1rem auto;
     border-radius: .5rem;
     color: white;
-    background-color: #2b2b2b;;
+    background-color: #2b2b2b;
     font-weight: 500;
     text-decoration: none;
     text-align: center;
