--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,29 +1,27 @@
 .Item {
-    width: 25%;
-    padding: 2.5rem 2rem;
-    border-radius: 1rem;
-    background-color: #f8f8f8;
+    width: 20%;  
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.158);
+}
+
+.Item img {
+    width: 100%;
+    height: 250px;
+    margin: auto;
+    background-color: rgb(230, 230, 230);
+}
+
+.Item div {
     display: flex;
     flex-direction: column;
     gap: .75rem;
 }
 
-.Item img {
-    width: 90%;
-    height: 200px;
-    margin: auto;
-    margin-bottom: 1rem;
-    border-radius: 1rem;
-    background-color: rgb(230, 230, 230);
-}
-
 .Item a {
     width: 90%;
     height: 3rem;
-    margin: 1rem auto;
-    border-radius: .5rem;
+    margin: auto;
     color: white;
-    background-color: #2b2b2b;
+    background-color: #131313;
     font-weight: 500;
     text-decoration: none;
     text-align: center;
@@ -31,6 +29,10 @@
 }
 
 .Item a:hover {
-    background-color: #ebac24;
+    background-color: rgb(235, 94, 0);
     transition: .25s ease;
+}
+
+.content {
+    margin: 1rem;
 }
