--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,40 +1,37 @@
-.ItemDetail {
-    padding: 3rem 0;
-}
-
-.ItemDetail img {
-    width: 800px;
-    height: 1200px;
-    margin: 3rem auto;
-    border-radius: 1rem;
+.product-img {
+    width: 700px;
+    height: 600px;
     background-color: rgb(230, 230, 230);
 }
 
-.ItemDetail h3 {
-    margin: 3rem;
-    font-size: 2.5rem;
+.product-content {
+    max-width: 600px;
 }
 
-.ItemDetail p {
-    width: 70%;
-    padding: 1.8rem 0;
-    margin: 1.5rem auto;
-    border-radius: .5rem;
-    color: white;
-    background-color: #ebac24;
+.product-content h3 {
+    margin-top: 2rem;
+    font-size: 3rem;
+}
+
+.product-content h4 {
+    margin: 4rem 0 1.5rem 0;
+    font-size: 1.75rem;
+}
+
+.product-content h3 + h4 {
+    margin-top: 2rem;
+    color: rgb(235, 94, 0);
+    font-size: 2rem;
+}
+
+.product-content hr {
+    margin: 1rem 0;
+}
+
+.product-content p {
+    margin: 1.5rem 0 3rem 0;
     font-size: 1.25rem;
-    font-weight: 500;
-    text-decoration: none;
-    text-align: center;
-}
-
-.ItemDetail a {
-    padding: 1rem 5rem;
-    color: #2b2b2b;
-    font-size: 1.3rem;
-    font-weight: 500;
-    text-decoration: none;
-    line-height: 2.5rem;
+    line-height: 1.5;
 }
 
 .ItemDetail a:hover {
