--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,10 +1,7 @@
 .ItemList {
-    padding: 6rem 0;
     margin-top: 2rem;
-    border-radius: 1rem;
-    background-color: rgb(230, 230, 230);
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 5rem;
+    gap: 5rem 2rem;
 }
