--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,13 +1,13 @@
 .ItemListContainer {
     width: 100%;
-    padding: 2rem 5rem;
-    margin: auto;
+    margin: 5rem auto 10rem auto;
     text-align: center;
 }
 
 .ItemListContainer h2 {
-    padding: 3rem;
-    color: #2b2b2b;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 5rem;
+    padding: 5rem;
+    color: #131313;
+    font-size: 4rem;
+    letter-spacing: 10px;
+    text-transform: uppercase;
 }
