--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,33 +1,34 @@
-.NavBar {
+.navbar {
     width: 100%;
-    padding: 2rem 5rem;
-    color: #fff;
-    background-color: #2b2b2b;
+    padding: 20px 7%;
     display: flex;
+    background: #ffffff;
+    align-items: center;
     justify-content: space-between;
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);
 }
 
-.NavBar h1 {
-    color: #ebac24;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2.5rem;
-    font-weight: 900;
+.logo img {
+    width: 80px;
 }
 
-.NavBar a {
-    color: #fff;
-    font-weight: 500;
+.navbar ul {
+    margin: 0 30px;
+    flex: 1;
+    list-style: none;
+    text-align: right;
+}
+
+.navbar ul li {
+    display: inline-block;
+    padding: 5px 15px;
+    margin: 0px 20px;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.navbar ul li a {
+    color: #131313;
     text-decoration: none;
-    line-height: 2.5rem;
-}
-
-.NavBar a:hover {
-    color: #ebac24;
-    transition: 0.2s ease-in;
-}
-
-.Links {
-    width: 40%;
-    display: flex;
-    justify-content: space-around;
 }
