--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,34 +1,31 @@
 .counter {
     font-size: 1.5rem;
     font-weight: 500;
-    display: flex;
-    justify-content: space-between;
 }
 
 .counter-quantity {
     display: flex;
+    justify-content: space-between;
 }
 
 .counter-quantity span {
-    padding: 1rem;
-    font-size: 1.75rem;
-}
-
-.counter-buttons {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-}
-
-.counter-buttons button {
     padding: .75rem;
+    font-size: 1.5rem;
+    flex-basis: 80%;
+    text-align: center;
+}
+
+.counter-quantity button {
+    padding: .5rem 1rem;
     border: none;
     font-size: 1rem;
     font-weight: 700;
 }
 
 .add-to-cart {
-    padding: 1rem;
+    width: 100%;
+    padding: 1.5rem;
+    margin: 1.5rem 0;
     border: none;
     color: white;
     background: #131313;
